Fix gap on right side of page
Using `border-box` box sizing prevents accidentally creating elements
that are wider than the viewport when their width is combined with
padding and margins. Hiding the overflow of the `html` and `body`
elements gets rid of the ~5px gap on the right side of the page that
could be scrolled over to.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,12 @@
 @import 'vars.scss';
 @import 'nav.scss';
 
+* {
+    box-sizing: border-box;
+}
+html, body {
+    overflow-x: hidden;
+}
 body {
     font-family: 'Assistant', sans-serif;
 }
